lint-check.txt
WARNING  Another version of 'ansible.netcommon' 8.1.0 was found installed in /Users/sivakasi/.pyenv/versions/3.12.3/lib/python3.12/site-packages/ansible_collections, only the first one will be used, 8.2.0 (/Users/sivakasi/.ansible/collections/ansible_collections).
Traceback (most recent call last):
  File "/Users/sivakasi/.pyenv/versions/3.12.3/bin/ansible-lint", line 7, in <module>
    sys.exit(_run_cli_entrypoint())
             ^^^^^^^^^^^^^^^^^^^^^
  File "/Users/sivakasi/.pyenv/versions/3.12.3/lib/python3.12/site-packages/ansiblelint/__main__.py", line 438, in _run_cli_entrypoint
    sys.exit(main(sys.argv))
             ^^^^^^^^^^^^^^
  File "/Users/sivakasi/.pyenv/versions/3.12.3/lib/python3.12/site-packages/ansiblelint/__main__.py", line 383, in main
    result = get_matches(rules, options)
             ^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/Users/sivakasi/.pyenv/versions/3.12.3/lib/python3.12/site-packages/ansiblelint/runner.py", line 731, in get_matches
    matches.extend(runner.run())
                   ^^^^^^^^^^^^
  File "/Users/sivakasi/.pyenv/versions/3.12.3/lib/python3.12/site-packages/ansiblelint/runner.py", line 166, in run
    matches = self._run()
              ^^^^^^^^^^^
  File "/Users/sivakasi/.pyenv/versions/3.12.3/lib/python3.12/site-packages/ansiblelint/runner.py", line 297, in _run
    matches.extend(
  File "/Users/sivakasi/.pyenv/versions/3.12.3/lib/python3.12/site-packages/ansiblelint/runner.py", line 512, in _emit_matches
    children = self.find_children(lintable)
               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/Users/sivakasi/.pyenv/versions/3.12.3/lib/python3.12/site-packages/ansiblelint/runner.py", line 540, in find_children
    return self.plugin_children(lintable)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/Users/sivakasi/.pyenv/versions/3.12.3/lib/python3.12/site-packages/ansiblelint/runner.py", line 628, in plugin_children
    offset, content = parse_examples_from_plugin(lintable)
                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/Users/sivakasi/.pyenv/versions/3.12.3/lib/python3.12/site-packages/ansiblelint/utils.py", line 1343, in parse_examples_from_plugin
    parsed = ast.parse(lintable.content)
             ^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/Users/sivakasi/.pyenv/versions/3.12.3/lib/python3.12/ast.py", line 52, in parse
    return compile(source, filename, mode, flags,
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "<unknown>", line 216
    Common methods for all states
IndentationError: unexpected indent
